GNOME Bugzilla – Bug 773916
GtkComposeTable caches broken: using a same ~/.XCompose does not work twice in a row
Last modified: 2016-11-10 19:33:16 UTC
Hello, I've long thought there were no support for ~/.XCompose in Gtk+3 on Wayland, but it seems there should be some basic support. And indeed there is. However, using the same ~/.XCompose more than once with GtkIMContextSimple will silently fail, suggesting that loading cached compose tables is the issue. I have not investigated further. Steps to reproduce: 1. Create a ~/.XCompose file with the following contents: <Multi_key> <t> <e> <s> <t> : "A" 2. Start a gtk-3 application on wayland and type compose t e s t This should print “A” 3. Close the gtk-3 application 4. Start a gtk-3 application again and type compose t e s t This should print “st”
Created attachment 339209 [details] [review] Fix loading cached compose tables After reading the code for a bit, I think I found the issue: the cache loading code sets the number of sequences incorrectly, using the wrong variable…
Attachment 339209 [details] pushed as 641b42f - Fix loading cached compose tables