Fix loading cached compose tables

https://bugzilla.gnome.org/show_bug.cgi?id=773916